Fix console icon-text alignment
Bug:none
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4935859
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -131,6 +131,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  margin-top: -1px;
 }
 
 .repeated-message .console-message-stack-trace-toggle,
